--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "qrcodejs2": "^0.0.2",
     "qs.js": "^0.1.12",
     "vue": "^2.5.2",
+    "vue-clipboard2": "^0.3.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
