--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "element-ui": "^2.11.1",
+    "html2canvas": "^1.0.0-rc.3",
     "mint-ui": "^2.2.13",
     "qrcodejs2": "^0.0.2",
     "qs.js": "^0.1.12",
