--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "element-ui": "^2.11.1",
     "html2canvas": "^1.0.0-rc.3",
     "mint-ui": "^2.2.13",
+    "moment": "^2.24.0",
     "qrcodejs2": "^0.0.2",
     "qs.js": "^0.1.12",
     "vue": "^2.5.2",
     "vue-clipboard2": "^0.3.0",
+    "vue-i18n": "^8.15.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
@@ -40,6 +42,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "js-md5": "^0.7.3",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
@@ -54,6 +57,7 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue-h5-plus": "^1.2.0",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.5.2",
